--- a/env/secureUpload/uploads/templates/uploads/home.html
+++ b/env/secureUpload/uploads/templates/uploads/home.html
@@ -1,9 +1,17 @@
 {% extends "uploads/base.html" %}
 
 {% block content %}
-    <h1>Secure Upload Home</h1>
-    {% for post in posts %}
-    <h2>{{post.name}}{{post.extension}}</h2>
-    <p>{{post.date_posted}}</p>
-    {% endfor %}
+<h1>Secure Upload Home</h1>
+{% for post in posts %}
+<article class="media content-section">
+    <div class="media-body">
+        <div class="article-metadata">
+            <a class="mr-2" href="#">{{ post.name }}</a>
+            <small class="text-muted">{{ post.date_posted }}</small>
+        </div>
+        <h2><a class="article-title" href="#">{{ post.name }}{{ post.extension }}</a></h2>
+        <p class="article-content">{{ post.content }}</p>
+    </div>
+</article>
+{% endfor %}
 {% endblock content %}
