added posting of files

--- a/env/secureUpload/uploads/templates/uploads/base.html
+++ b/env/secureUpload/uploads/templates/uploads/base.html
@@ -33,12 +33,11 @@
                 <div class="collapse navbar-collapse" id="navbarToggle">
                     <div class="navbar-nav mr-auto">
                         <a class="nav-item nav-link" href="{% url 'uploads-home' %}">Files</a>
-                        <a class="nav-item nav-link" href="{% url 'uploads-upload' %}">Upload</a>
+                        <a class="nav-item nav-link" href="{% url 'uploads-new' %}">Upload</a>
                     </div>
                     <!-- Navbar Right Side -->
                     <div class="navbar-nav">
-                        <a class="nav-item nav-link" href="#">Login</a>
-                        <a class="nav-item nav-link" href="#">Register</a>
+                        <a class="nav-item nav-link" href="/accounts/logout/">Logout</a>
                     </div>
                 </div>
             </div>
