--- a/env/secureUpload/uploads/templates/uploads/home.html
+++ b/env/secureUpload/uploads/templates/uploads/home.html
@@ -7,10 +7,10 @@
 <article class="media content-section">
     <div class="media-body">
         <div class="article-metadata">
-            <a class="mr-2" href="#">{{ post.name }}</a>
+            <a class="mr-2" href="{% url 'uploads-detail' post.id %}">{{ post.name }}</a>
             <small class="text-muted">{{ post.date_posted }}</small>
         </div>
-        <h2><a class="article-title" href="#">{{ post.name }}{{ post.extension }}</a></h2>
+        <h2><a class="article-title" href="{% url 'uploads-detail' post.id %}">{{ post.name }}{{ post.extension }}</a></h2>
         <p class="article-content">{{ post.content }}</p>
     </div>
 </article>
