--- a/env/secureUpload/uploads/templates/uploads/home.html
+++ b/env/secureUpload/uploads/templates/uploads/home.html
@@ -4,6 +4,7 @@
 {% block content %}
 <h1>Secure Upload Home</h1>
 {% for post in posts %}
+{% if post.user.id == user.id %}
 <article class="media content-section">
     <div class="media-body">
         <div class="article-metadata">
@@ -14,5 +15,7 @@
         <p class="article-content">{{ post.content }}</p>
     </div>
 </article>
+{% endif %}
 {% endfor %}
-{% endblock content %}
+{% endblock %}
+
