--- a/env/secureUpload/uploads/templates/uploads/base.html
+++ b/env/secureUpload/uploads/templates/uploads/base.html
@@ -32,13 +32,21 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarToggle">
                     <div class="navbar-nav mr-auto">
+                        {% if user.is_authenticated %}
                         <a class="nav-item nav-link" href="{% url 'uploads-home' %}">Files</a>
                         <a class="nav-item nav-link" href="{% url 'uploads-new' %}">Upload</a>
+                        {% endif %}
                     </div>
                     <!-- Navbar Right Side -->
+                    {% if user.is_authenticated %}
                     <div class="navbar-nav">
                         <a class="nav-item nav-link" href="/accounts/logout/">Logout</a>
                     </div>
+                    {% else %}
+                    <div class="navbar-nav">
+                        <a class="nav-item nav-link" href="/accounts/login/">Login</a>
+                    </div>
+                    {% endif %}
                 </div>
             </div>
         </nav>
